--- a/PollsDjango/app/templates/app/details.html
+++ b/PollsDjango/app/templates/app/details.html
@@ -9,7 +9,8 @@
 <p class="text-danger">{{error_message}}</p>
 {% endif %}
 
-<form action="{% url 'app:vote' poll.id %}" method="post">
+<form action="" method="post">
+
 {% csrf_token %}
 {% for choice in poll.choice_set.all %}
     <div class="radio">
