--- a/PollsDjango/app/templates/app/prof.html
+++ b/PollsDjango/app/templates/app/prof.html
@@ -1,13 +1,23 @@
 {% extends "app/layout.html" %}
 
 {% block content %}
-    <table class="table table-hover">
+    <table class="table table-hover" style="margin-left: -75px">
     <thead>
     <br>
-      <tr><th>Enrolled Students in this Course</th></tr>
+      <tr>
+        <th>Enrolled Students</th>
+        {% for i in "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" %}
+        <th>{{ forloop.counter0|add:1 }}</th>
+        {% endfor %}
+      </tr>
     {% for g in students %}
       {% if not g.is_staff %}
-      <tr><td><a href="/student">{{g.username}}</a></td></tr>
+      <tr>
+      <td>{{g.username}}</td>
+      {% for j in "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"  %}
+          <td>p</td>
+          {% endfor %}
+      </tr>
       {% endif %}
     {% endfor %}
     </thead>
